works fine on safari, still busted on mobile chrome??? bah fixed clickthru height on mobile

--- a/assets/scripts/style.css
+++ b/assets/scripts/style.css
@@ -112,7 +112,7 @@ body {
 
 #clickThru {
     position: absolute;
-    bottom: 24px;
+    bottom: 125px;
     font-size: 24px;
     text-align: center;
     color: white;
